feat: 实现记忆中枢功能增强与系统优化
- 新增记忆中枢功能模块，整合记忆图谱、记忆流光和记忆治理三大子功能
- 优化记忆流光界面，增加图谱激活内容和基础事实展示
- 重构系统设置模块，支持更多配置项和模型动态加载
- 改进前端主题配色方案，增强视觉一致性
- 添加全局异常处理器，优化错误反馈机制
- 调整后端API接口，支持更细粒度的记忆管理
- 修复命令执行工具的参数转义问题
- 更新系统设计文档，补充记忆中枢详细说明